@@ -29,9 +29,7 @@ with abnormal copy number within each parental chromosome.
  }
 
  \section{Installation and updates}{
-
-   To install this package, see instructions at
-   \url{http://r-forge.r-project.org/}.
+   To install this package, use \code{install.packages("PSCBS")}.
  }
 
  \section{To get started}{
