@@ -8,6 +8,9 @@ o GENERALIZATION: Now the internal estimator function that
   instead of throwing an exception.  This will in turn make callLOH()
   call all segments to be non-LOH.
 o DOCUMENTATION: Removed obsolete references to the R-forge repository.
+o BUG FIX: Consecutive calls to callAB(..., force=TRUE) would append
+  additional 'abCall' columns to the segmentation table instead of
+  replacing existing calls.
 
 
 Version: 0.11.3 [2011-07-06]
